--- a/section1/index.html
+++ b/section1/index.html
@@ -15,6 +15,7 @@
 					<span class="heading-primary__main">this is main title</span>
 					<span class="heading-primary__sub">这里是sub文字内容</span>
 				</h1>
+				<a class="btn" href="#">i'm button</a>
 			</div>
 		</header>
 	</body>
